# SparTA

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README  README.md  azure-pipelines.yml  kernel_balance_align_reg_block  kernel_balance_align_reg_block.cu  kernel_balance_align_shared.cu  parse_spmm.py  parse_spmv.py  requirements.txt  setup.py
SparTA/Common/: Abstract.py  Utils.py
SparTA/OPs/: BcsrConverter.py  (+4 more)
bench/: bench_requirements.txt
benchmark/: compare_latency.py
cmake/: CUDA.cmake  FindCuda.cmake
csrc/: common.h  convert_bcsr_forward.cpp  convert_bcsr_forward_kernel.cu  cublas.cu  cusparse.cu  cusparse_block_ell_int8.cu  cusparse_linear_forward.cpp  cusparse_linear_forward_kernel.cu  cusparselt_int8.cu  dynamic_sparse_attention_forward.cpp  dynamic_sparse_attention_forward_kernel.cu  dynamic_sparse_linear_forward.cpp  dynamic_sparse_linear_forward_kernel.cu  moe_sparse_forward.cpp  moe_sparse_forward_kernel.cu  moe_sparse_forward_kernel.cu.j2  run.sh  seqlen_dynamic_sparse_attention_forward.cpp  seqlen_dynamic_sparse_attention_forward_kernel.cu  summarize.py
docs/: 0-overview.md  1-code-specializer.md  2-tunable-implements.md  Architecture_design.md  README.md  conf.py  index.md  readme_link.md  sphinx_requirements.txt  start.sh
examples/: sparse-linear.ipynb  sparse_attention.ipynb  sparse_linear.ipynb  sparse_linear_networks.ipynb  sparse_softmax.ipynb
image/: Dockerfile  Dockerfile.a100
nmsparse/: CMakeLists.txt  context.cu  context.cuh  nmsparse.cuh  nmsparse.h  nmsparse_bw4x4.cuh  nmsparse_bw64x64.cuh  nmsparse_ew  nmsparse_ew.cu  nmsparse_ew.cuh  nmsparse_vw32.cuh  nmsparse_vw4.cuh  nmsparse_vw64.cuh  utils.cu  utils.cuh
script/: init_env_a100.sh  init_env_v100.sh  run_a100.sh  run_v100.sh
sparta/: __init__.py
test/: test_docs.py  test_grid_search_tuner.py  test_matmul_dsd_family.py  test_matmul_dsd_pipeline.py  test_matmul_family.py  test_matmul_openai_dds_pipeline.py  test_matmul_openai_dsd_pipeline.py  test_matmul_openai_sdd_pipeline.py  test_matmul_sdd_family.py  test_matmul_sdd_pipeline.py  test_openai_matmul_dds.py  test_openai_matmul_dsd.py  test_openai_sparse_matmul_dds.py  test_openai_sparse_matmul_dsd.py  test_openai_sparse_matmul_sdd.py  test_operator_tuning.py  test_our_sparse_matmul_dsd.py  test_our_sparse_matmul_sdd.py  test_our_sparse_softmax.py  test_requirements.txt  test_search_space.py  test_softmax_pipeline.py  test_sparse_attention_function.py  test_sparse_attention_operators.py  test_sparse_linear_operators.py  test_sparse_matmul_family.py  test_sparse_matmul_functions.py  test_sparse_matmul_kernels.py  test_sparse_matmul_operators.py  test_sparse_matmul_search_space.py  test_sparse_softmax_functions.py  test_sparse_softmax_kernels.py  test_sparse_softmax_operators.py  test_tesa.py  test_tuner.py  test_tuners.py  tmp.py  try_tuner.py
test_old/: test_docs.py  test_sparse_matmul_kernels.py  test_sparse_softmax_operators.py
tests/: CMakeLists.txt  test.cu  test_cuda_printf_within_gtest.cu  test_nmsparse_bw4x4_gemm.cu  test_nmsparse_ew_gemm.cu  test_nmsparse_ew_gemv.cu  test_nmsparse_vw32_gemm.cu  test_nmsparse_vw4_gemm.cu  test_nmsparse_vw64_gemm.cu
(+442 files in other folders)
